--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/PIcNote.png" />
+    <link rel="icon" type="image/png" href="/PN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PicNote</title>
   </head>
